refactors password hasher to use static constructor method, user patch to use strategy pattern