@@ -10,7 +10,7 @@ import java.util.StringJoiner;
 @SuppressWarnings({"java:S1104","java:S116"})
 public class UserPatch {
   @NotNull
-  public List<String> schemas = Arrays.asList("urn:ietf:params:scim:api:messages:2.0:PatchOp" );
+  public List<String> schemas = List.of("urn:ietf:params:scim:api:messages:2.0:PatchOp" );
   public List<UserPatchOp> Operations;
 
   @Override
